--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -96,7 +96,7 @@
 }
 
 .header-logo {
-    color: black;
+    color: #181507;
     font-family: 'Work Sans', Helvetica, Arial, sans-serif;
     font-weight: 500;
     font-size: 1.5rem;
@@ -114,7 +114,7 @@
 }
 
 .header-logo a {
-    color: black;
+    color: #181507;
     text-decoration: none;
     cursor: pointer;
 }
@@ -124,7 +124,7 @@
 }
 
 .header-menu {
-    background: black;
+    background: #181507;
     border: 0;
     color: white;
     cursor: pointer;
@@ -148,7 +148,7 @@
 (orientation: landscape) and (max-height: 22.499rem) {
     .header-active .header-menu {
         background: white;
-        color: black;
+        color: #181507;
     }
 }
 
