--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -65,7 +65,7 @@
 }
 
 .header-container {
-    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+    border-bottom: #181507 1px solid;
     height: 3rem;
     position: absolute;
     top: 0;
